--- a/css/responsiveslides.css
+++ b/css/responsiveslides.css
@@ -13,7 +13,7 @@
   -webkit-backface-visibility: hidden;
     text-align: center;
     position: relative;
-    margin-left: 56px;
+    margin-left: 5px;
   }
 
 .rslides li:first-child {
